--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@
   border-left: 6px solid #111;
   border-right: 6px solid #111;
   height: 0;
-  left: 0;
+  left: 0px;
   position: absolute;
   top: 0;
   width: 9px;
@@ -49,7 +49,7 @@
   border-top: 6px solid tan;
   bottom: 0;
   height: 0;
-  left: 0;
+  left: 0px;
   position: absolute;
   width: 9px;
 }
